--- a/main.css
+++ b/main.css
@@ -17,13 +17,12 @@ html{
 body{
     width: 100vw;
     height: 100vh;
-    display: grid;
-    place-content: center;
     background: black url(img/background-weather_2.jpg) fixed center top /cover;
     overflow: hidden;
 }
 
 section{
+    margin: 50px auto;
     width: 500px;
     font-size: 10px;
     background-color: #000000;
