--- a/main.css
+++ b/main.css
@@ -17,12 +17,13 @@ html{
 body{
     width: 100vw;
     height: 100vh;
+    display: grid;
+    place-content: center;
     background: black url(img/background-weather_2.jpg) fixed center top /cover;
     overflow: hidden;
 }
 
 section{
-    margin: 50px auto;
     width: 500px;
     font-size: 10px;
     background-color: #000000;
@@ -125,9 +126,19 @@ footer p{
 }
 
 @media(max-width:480px){
+    body{
+        display: block;
+        width: 100vw;
+        height: 100vh;
+        background: black url(img/background-weather_2.jpg) fixed center top /cover;
+        overflow: hidden;
+    }
+    
     section{
         width: 90vw;
+        margin: 90px auto;
     }
+
 
     .localDiv input{
         width: 80%;
